# amplifier-docs

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yaml  pyproject.toml
docs/: .nav.yml  index.md
docs/api/: index.md
docs/api/cli/: index.md
docs/api/core/: coordinator.md  events.md  hooks.md  index.md  models.md  session.md
docs/architecture/: events.md  index.md  kernel.md  modules.md  mount_plans.md  overview.md
docs/community/: contributing.md  index.md  roadmap.md  support.md
docs/developer/: index.md  local_development.md  module_development.md
docs/developer/contracts/: context.md  hook.md  index.md  orchestrator.md  provider.md  tool.md
docs/ecosystem/: index.md
docs/getting_started/: index.md  installation.md  providers.md  quickstart.md
docs/includes/: abbreviations.md
docs/libraries/: collections.md  config.md  index.md  module_resolution.md  profiles.md
docs/mkdocs/hooks/: module_catalog.py
docs/modules/: index.md
docs/modules/contexts/: index.md  persistent.md  simple.md
docs/modules/hooks/: approval.md  index.md  logging.md  redaction.md
docs/modules/orchestrators/: index.md  loop_basic.md  loop_events.md  loop_streaming.md
docs/modules/providers/: anthropic.md  azure.md  index.md  ollama.md  openai.md  vllm.md
docs/modules/tools/: bash.md  filesystem.md  index.md  search.md  task.md  todo.md  web.md
docs/showcase/: index.md
docs/stylesheets/: extra.css
docs/user_guide/: agents.md  cli.md  collections.md  index.md  profiles.md  sessions.md
