[project]
name = "amplifier-docs"
version = "0.1.0"
description = "Documentation site for Amplifier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-awesome-nav>=2.9.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pydantic>=2.0.0",
]
